--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -1,6 +1,6 @@
 ﻿<section class="dz-row">
 	@Html.Partial( "_LobbyLoginBar" )
-	<header style="background: rgb(232, 232, 228); width: 100%; border-top: 1px solid #E8E5E5;">
+	<header id="lobbyHeader">
 		<div id="lobbyLogo">
 			<img src="~/Images/Logo/kkLogo.png" alt="logo" />
 		</div>
