--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyLoginBar.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyLoginBar.cshtml
@@ -11,7 +11,7 @@
 else
 {
 	<div id="loginBarContainer">
-		<span id="registerSpanLink" class="lobby-login-text hover-cursor-pointer" data-bind="click: showRegisterFormOnClick">Stwórz konto</span>
-		<span id="loginSpanLink" data-bind="click: showLoginFormOnClick" class="hover-cursor-pointer gray-btn">Zaloguj sie</span>
+		<span href="#" id="registerSpanLink" class="lobby-login-text hover-cursor-pointer" data-bind="click: showRegisterFormOnClick">Stwórz konto</span>
+		<span id="loginSpanLink" data-bind="click: showLoginFormOnClick" class="hover-cursor-pointer">Zaloguj sie<span/>
 	</div>
 }
