--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyLoginBar.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyLoginBar.cshtml
@@ -1,17 +1,17 @@
 ﻿@if (Request.IsAuthenticated)
 {
-	<div id="loginBarContainer">
-		<span class="lobby-login-text">@User.Identity.Name</span>
-		@using (Html.BeginForm( "LogOff", "Account", FormMethod.Post, new { id = "logoutForm" } ))
+<div id="loginBarContainer">
+  <span class="lobby-login-text">@User.Identity.Name</span>
+  @using (Html.BeginForm( "LogOff", "Account", FormMethod.Post, new { id = "logoutForm" } ))
   {
-			@Html.AntiForgeryToken()
-			<a style="color: rgb(255, 109, 109);padding-right:4px;" href="javascript:document.getElementById('logoutForm').submit()">wyloguj</a>   }
-	</div>
+  @Html.AntiForgeryToken()
+  <a style="color: rgb(255, 109, 109);padding-right:4px;" href="javascript:document.getElementById('logoutForm').submit()">wyloguj</a>   }
+</div>
 }
 else
 {
-	<div id="loginBarContainer">
-		<span href="#" id="registerSpanLink" class="lobby-login-text hover-cursor-pointer" data-bind="click: showRegisterFormOnClick">Stwórz konto</span>
-		<span id="loginSpanLink" data-bind="click: showLoginFormOnClick" class="hover-cursor-pointer">Zaloguj sie<span/>
-	</div>
+<div id="loginBarContainer">
+  <span id="registerLink" class="lobby-login-text hover-cursor-pointer" data-bind="click: showRegisterFormOnClick">Stwórz konto</span>
+  <span id="loginLink" data-bind="click: showLoginFormOnClick" class="hover-cursor-pointer lobby-login-text">Zaloguj sie</span>
+</div>
 }
