--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -116,8 +116,8 @@ MEDIA QUERIES
     margin-right: 0;
   }
 
-  #registerSpanLink {
-    margin-right: 5px;
+  #loginLink {
+    font-size: .8em;
   }
 
   #registerForm ol {
