--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -4,7 +4,9 @@ MEDIA QUERIES
 
 @media only screen and (min-width: 768px) {
   /* tablets and desktop */
-
+  .rg-width-49per {
+    width: 49%;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -142,6 +144,10 @@ MEDIA QUERIES
     bottom: 10px;
     vertical-align: bottom;
   }
+
+  .rg-width-49per {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 767px) and (orientation: portrait) {
@@ -176,6 +182,14 @@ MEDIA QUERIES
   }
 
   #lobbyLogo img {
+    width: 100%;
+  }
+
+  .rg-width-49per {
+    width: 100%;
+  }
+
+  .display-events-overview-item .event-kind-tag {
     width: 100%;
   }
 }
