--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -4,6 +4,9 @@ MEDIA QUERIES
 
 @media only screen and (min-width: 768px) {
   /* tablets and desktop */
+  .rg-width-49per {
+    width: 49%;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -142,6 +145,10 @@ MEDIA QUERIES
     vertical-align: bottom;
   }
 
+  .rg-width-49per {
+    width: 100%;
+  }
+
   .display-events-overview-item .event-kind-tag {
     border: none;
   }
@@ -180,5 +187,17 @@ MEDIA QUERIES
 
   #lobbyLogo img {
     width: 100%;
+  }
+
+  .rg-width-49per {
+    width: 100%;
+  }
+
+  .list-item-other {
+    display: block;
+  }
+
+  .display-events-overview-item .event-kind-tag {
+    vertical-align: top;
   }
 }
