--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -156,6 +156,10 @@ MEDIA QUERIES
   .list-item-other {
     width: 80px;
   }
+
+  .popupbox {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 767px) and (orientation: portrait) {
