--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -859,6 +859,8 @@ fieldset {
   z-index: 100;
   top: 0;
   position: absolute;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .confirmation-popupbox {
