--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Register.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Register.cshtml
@@ -19,7 +19,7 @@
               <div>
                 @Html.ValidationMessageFor(m => m.RegisterModel.UserName)
               </div>
-              @Html.TextBoxFor(m => m.RegisterModel.UserName, new { maxlength = 30 })<span class="exclamation-mark">*</span>
+              @Html.TextBoxFor(m => m.RegisterModel.UserName, new { maxlength = 30 })<span class="required-mark">*</span>
 
             </li>
             <li>
@@ -28,7 +28,7 @@
               <div>
                 @Html.ValidationMessageFor(m => m.RegisterModel.Password)
               </div>
-              @Html.PasswordFor(m => m.RegisterModel.Password, new { maxlength = 30 })<span class="exclamation-mark">*</span>
+              @Html.PasswordFor(m => m.RegisterModel.Password, new { maxlength = 30 })<span class="required-mark">*</span>
 
             </li>
             <li>
@@ -37,7 +37,7 @@
               <div>
                 @Html.ValidationMessageFor(m => m.RegisterModel.ConfirmPassword)
               </div>
-              @Html.PasswordFor(m => m.RegisterModel.ConfirmPassword, new { maxlength = 30 })<span class="exclamation-mark">*</span>
+              @Html.PasswordFor(m => m.RegisterModel.ConfirmPassword, new { maxlength = 30 })<span class="required-mark">*</span>
 
             </li>
             <li>
@@ -45,7 +45,7 @@
               <div>
                 @Html.ValidationMessageFor(m => m.User.Email)
               </div>
-              @Html.TextBoxFor(m => m.User.Email, new { maxlength = 30 })<span class="exclamation-mark">*</span>
+              @Html.TextBoxFor(m => m.User.Email, new { maxlength = 30 })<span class="required-mark">*</span>
 
             </li>
             <li>
@@ -54,7 +54,7 @@
               <div>
                 @Html.ValidationMessageFor(m => m.User.FirstName)
               </div>
-              @Html.TextBoxFor(m => m.User.FirstName, new { maxlength = 30 })<span class="exclamation-mark">*</span>
+              @Html.TextBoxFor(m => m.User.FirstName, new { maxlength = 30 })<span class="required-mark">*</span>
 
             </li>
             <li>
@@ -62,7 +62,7 @@
               <div>
                 @Html.ValidationMessageFor(m => m.User.LastName)
               </div>
-              @Html.TextBoxFor(m => m.User.LastName, new { maxlength = 30 })<span class="exclamation-mark">*</span>
+              @Html.TextBoxFor(m => m.User.LastName, new { maxlength = 30 })<span class="required-mark">*</span>
 
             </li>
             <li>
@@ -77,7 +77,7 @@
             {"Kobieta", "k"},
         },
         "Value", "Key")
-, new { style = "width:130px;" })<span class="exclamation-mark">*</span>
+, new { style = "width:130px;" })<span class="required-mark">*</span>
             </li>
             <li>
 
@@ -97,17 +97,17 @@
 
               <div class="inline-block">
                 @Html.TextBoxFor(m => m.BirthDateModel.Day, string.Empty, new { id = "birthDateDayTxtBox", @class = "register-birthdate-txtbox", placeholder = "dzień", maxlength = 2 })
-                <span class="exclamation-mark xs-show-inline">*</span>
+                <span class="required-mark xs-show-inline">*</span>
               </div>
               <span class="xs-hide-inline slash-separator"> / </span>
               <div class="inline-block">
                 @Html.TextBoxFor(m => m.BirthDateModel.Month, string.Empty, new { id = "birthDateMonthTxtBox", @class = "register-birthdate-txtbox register-birthdate-month-thxbox", placeholder = "miesiąc", maxlength = 2 })
-                <span class="exclamation-mark xs-show-inline">*</span>
+                <span class="required-mark xs-show-inline">*</span>
               </div>
               <span class="xs-hide-inline slash-separator"> / </span>
               <div class="inline-block">
                 @Html.TextBoxFor(m => m.BirthDateModel.Year, string.Empty, new { id = "birthDateYearTxtBox", @class = "register-birthdate-txtbox", placeholder = "rok", maxlength = 4 })
-                <span class="exclamation-mark">*</span>
+                <span class="required-mark">*</span>
               </div>
             </li>
             <li>
