--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -355,8 +355,7 @@ fieldset {
 }
 
 .event-block-link {
-  word-break: break-word;
-  word-wrap: break-word;
+  word-break: break-all;
 }
 
 /*Calendar page*/
