--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsMyCalendarMenuItem.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsMyCalendarMenuItem.cshtml
@@ -20,7 +20,7 @@
 			</div>
 			<div style="display: none;" class="event-block-container" data-bind="attr: { 'data-eventid': id }">
 				<div class="event-block">
-					@Html.Partial("_LobbyEventDetails")
+					@Html.Partial("_LobbyEventBlock")
 				</div>
 			</div>
 		</div>
@@ -46,7 +46,7 @@
 			</div>
 			<div style="display: none;" class="event-block-container" data-bind="attr: { 'data-eventid': id }">
 				<div class="event-block">
-					@Html.Partial("_LobbyEventDetails")
+					@Html.Partial("_LobbyEventBlock")
 				</div>
 			</div>
 		</div>
