--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyPublicEventList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyPublicEventList.cshtml
@@ -22,7 +22,7 @@
 				</div>
 			</div>
 			<div class="event-block-expand" style="display:none;">
-				@Html.Partial( "_LobbyEventDetails" )
+				@Html.Partial( "_LobbyEventBlock" )
 			</div>
 		</div>
 	</div>
@@ -50,7 +50,7 @@
 				</div>
 			</div>
 			<div class="event-block-expand" style="display:none;">
-				@Html.Partial( "_LobbyEventDetails" )
+				@Html.Partial( "_LobbyEventBlock" )
 			</div>
 		</div>
 	</div>
