--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -95,7 +95,8 @@ fieldset {
 }
 
 #lobbyHeader {
-  background: rgb(232, 232, 228);
+  /*background: rgb(232, 232, 228);*/
+  background: rgb(236, 236, 236);
   width: 100%;
   border-top: 1px solid #E8E5E5;
 }
@@ -293,8 +294,8 @@ fieldset {
 }
 
 .display-events-overview-item {
-  border-left: 2px solid #D8D8C5;
-  border-right: 2px solid #D8D8C5;
+  border-left: 2px solid #DEDEDE;
+  border-right: 2px solid #DEDEDE;
   border-bottom: 2px solid #E6E6E6;
   border-top: 1px solid #FFFFFF;
   background: #F7F7F7;
@@ -310,26 +311,9 @@ fieldset {
   padding: 20px;
 }
 
-.event-block-container {
-  display: inline-block;
-  width: 33%;
-  vertical-align: top;
-  margin: 1px;
-  border: 1px solid #CECECE;
-}
-
 .js-masonry {
   background: #CECECE;
-  margin: 0 auto;
-  width: 99%;
-}
-
-.event-block {
-  color: rgb(95, 93, 91);
-  line-height: 1;
-  background: #EAE8E0;
-  border: 2px solid rgb(255, 255, 255);
-  min-height: 200px;
+  width: 100%;
 }
 
 #lobbyEventsMasonryContainer {
@@ -352,10 +336,6 @@ fieldset {
   padding: 8px;
   font-size: 1em;
   vertical-align: middle;
-}
-
-.event-block-link {
-  word-break: break-all;
 }
 
 /*Calendar page*/
@@ -498,44 +478,10 @@ fieldset {
   display: inline-block;
 }
 
-.details-event-block-container {
-  margin-bottom: 4px;
-}
-
-.details-event-block {
-  color: rgb(250, 250, 250);
-  line-height: 1;
-  /*background: rgb(228, 223, 202);*/
-  background: rgb(210, 210, 188);
-}
-
-  .details-event-block .event-kind-tag {
-    padding: 5px;
-    background: #A29C8F;
-    width: 100px;
-    line-height: 1.5;
-    font-size: 1em;
-    float: right;
-    text-align: center;
-  }
-
-.details-event-block-body {
-  color: rgb(72, 68, 62);
-  border-top: 2px solid #FDFDFD;
-  padding: 10px;
-  font-size: 1.2em;
-}
-
 #notesContainer {
   float: right;
   vertical-align: top;
   width: 49%;
-}
-
-.details-event-block-footer {
-  padding: 10px;
-  overflow: hidden;
-  color: rgb(152, 152, 137);
 }
 
 .notes-shadow-box {
@@ -605,23 +551,6 @@ fieldset {
   clear: both;
 }
 
-.details-event-block-info-date {
-  color: #969689;
-  margin-bottom: 10px;
-}
-
-.details-event-block-info-body {
-  margin-top: 20px;
-  padding-left: 20px;
-}
-
-.details-event-block-info-time {
-  font-size: 1.6em;
-}
-
-.details-event-block-info-addedby {
-  font-size: .8em;
-}
 
 
 /*#clockCanvas {
@@ -756,8 +685,6 @@ fieldset {
   vertical-align: top;
 }
 
-.event-block-description {
-}
 
 .display-events-overview-item-list {
   padding-left: 100px;
@@ -817,10 +744,6 @@ fieldset {
   text-align: center;
   display: inline-block;
   border: 1px solid #F7F7F7;
-}
-
-.event-block-menu {
-  float: right;
 }
 
 .dziennik-menu-container {
