--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -45,7 +45,7 @@
     <div class="grid js-masonry" data-bind="masonry: { data: publicEvents, masonryOptions: { itemClass: 'event-block-container', gutter: 10 } }">
       <div class="event-block-container" data-bind="attr: { 'data-eventid': id }">
         <div class="event-block">
-          @Html.Partial("_LobbyEventDetails")
+          @Html.Partial("_LobbyEventBlock")
         </div>
       </div>
     </div>
