--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -30,13 +30,11 @@
     <div id="lobbyDisplayEventsOverviewContainer" class="display-events-overview-container" data-bind="visible: $root.lobbyPagePublicEventListMenu.isOpen()">
       <header class="display-events-overview-header">
         <span class="display-events-header-menu-title selected hover-cursor-pointer">Publiczne wydarzenia</span>
-        <span class="btn-close red-color hover-cursor-pointer" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</span>
+        <span class="btn-close hover-cursor-pointer" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</span>
       </header>
       @Html.Partial("_LobbyPublicEventList")
     </div>
-
     <input type="button" value="Stwórz publiczne wydarzenie +" id="addPublicEventBtn" class="btn-add green-color hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPublicEventPopupOnClick( $element, data, e ) }" />
-
   </section>
 </section>
 <section class="dz-row">
@@ -44,9 +42,7 @@
   <section id="lobbyEventsMasonryContainer">
     <div class="grid js-masonry" data-bind="masonry: { data: publicEvents, masonryOptions: { itemClass: 'event-block-container', gutter: 10 } }">
       <div class="event-block-container" data-bind="attr: { 'data-eventid': id }">
-        <div class="event-block">
           @Html.Partial("_LobbyEventBlock")
-        </div>
       </div>
     </div>
   </section>
