--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
@@ -3,7 +3,7 @@
 <div id="addNewEventContainer" class="popupbox" style="display:none;">
 
   <div class="popupbox-header">
-    <span class="btn-close red-color hover-cursor-pointer" data-bind="click: $root.closeAddNewEventPopupOnClick">
+    <span class="btn-close hover-cursor-pointer" data-bind="click: $root.closeAddNewEventPopupOnClick">
       x
     </span>
   </div>
