--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Register.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Register.cshtml
@@ -2,7 +2,7 @@
 
 <div id="registerPageContainer" class="flat-form">
   <div class="form-header">
-    <span data-bind="click: closeRegisterPopupOnClick" class="btn-close red-color hover-cursor-pointer">x</span>
+    <span data-bind="click: closeRegisterPopupOnClick" class="btn-close hover-cursor-pointer">x</span>
   </div>
   <div class="form-body">
     @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { id = "registerForm" }))
