--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyPublicEventList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyPublicEventList.cshtml
@@ -1,58 +1,57 @@
 ﻿<div class="display-events-overview-body">
-	<div class="legend-oldorupcoming" data-bind="click: function () { $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showOld( !$root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showOld() ), $root.showSelectedEvents( $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents, 'old', $root.lobbyPagePublicEventListMenu.selectedEventKindValues ) }">
-		<div class="oldorupcoming-text-container">
-			<span class="oldorupcoming-sign" data-bind="text: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showOld() == true ? '-' : '+'">+</span>
-			<span>stare</span>
-		</div>
-		<span class="oldorupcoming-expand-text sm-hidden" data-bind="text: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showOld() == true ? '[zwiń]' : '[rozwiń]'"></span>
-		<span class="oldorupcoming-event-count" data-bind="text: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.old().length > 0 ? $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.old().length : ''"></span>
-	</div>
-	<div class="display-events-overview-item-list" data-bind="foreach: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.old">
-		<div class="display-events-overview-item">
-			<div class="overview-item-inner-wrapper" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
-				<div class="inline-block rg-width-49per">
-					<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
-					<span class="list-item-date">
-						<span class="list-item-other" data-bind="text: startDate.displayFullDate()"></span>
-						<span class="list-item-other" data-bind="text: startDate.displayFullTime()"></span>
-					</span>
-				</div>
-				<div class="inline-block rg-width-49per">
+  <div class="legend-oldorupcoming" data-bind="click: function () { $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showOld( !$root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showOld() ), $root.showSelectedEvents( $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents, 'old', $root.lobbyPagePublicEventListMenu.selectedEventKindValues ) }">
+    <div class="oldorupcoming-text-container">
+      <span class="oldorupcoming-sign" data-bind="text: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showOld() == true ? '-' : '+'">+</span>
+      <span>stare</span>
+    </div>
+    <span class="oldorupcoming-expand-text sm-hidden" data-bind="text: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showOld() == true ? '[zwiń]' : '[rozwiń]'"></span>
+    <span class="oldorupcoming-event-count" data-bind="text: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.old().length > 0 ? $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.old().length : ''"></span>
+  </div>
+  <div class="display-events-overview-item-list" data-bind="foreach: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.old">
+    <div class="display-events-overview-item">
+      <div class="overview-item-inner-wrapper" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
+        <div class="inline-block">
+          <div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
           <span class="list-item-title" data-bind="text: name"></span>
-				</div>
-			</div>
-			<div class="event-block-expand" style="display:none;">
-				@Html.Partial( "_LobbyEventBlock" )
-			</div>
-		</div>
-	</div>
-	<div class="legend-oldorupcoming" data-bind="click: function () { $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showUpcoming( !$root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showUpcoming() ), $root.showSelectedEvents( $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents, 'upcoming', $root.lobbyPagePublicEventListMenu.selectedEventKindValues ) }">
-		<div class="oldorupcoming-text-container">
-			<span class="oldorupcoming-sign" data-bind="text: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showUpcoming() == true ? '-' : '+'">+</span>
-			<span>nadchodzące</span>
-		</div>
-		<span class="oldorupcoming-expand-text sm-hidden" data-bind="text: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showUpcoming() == true ? '[zwiń]' : '[rozwiń]'"></span>
-		<span class="oldorupcoming-event-count" data-bind="text: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.upcoming().length > 0 ? $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.upcoming().length : ''"></span>
-	</div>
-	<div class="display-events-overview-item-list" data-bind="foreach: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.upcoming" s>
-		<div class="display-events-overview-item">
-			<div class="overview-item-inner-wrapper" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
-				<div class="inline-block rg-width-49per">
-					<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
-				
-					<span class="list-item-date">
-						<span class="list-item-other" data-bind="text: startDate.displayFullDate()"></span>
-						<span class="list-item-other" data-bind="text: startDate.displayFullTime()"></span>
-					</span>
-				</div>
-				<div class="inline-block rg-width-49per">
+        </div>
+        <div class="inline-block" style="float:right;">
+          <span class="list-item-date">
+            <span class="list-item-other" data-bind="text: startDate.displayFullDate()"></span>
+            <span class="list-item-other" data-bind="text: startDate.displayFullTime()"></span>
+          </span>
+        </div>
+      </div>
+      <div class="event-block-expand" style="display:none;">
+        @Html.Partial("_LobbyEventBlock")
+      </div>
+    </div>
+  </div>
+  <div class="legend-oldorupcoming" data-bind="click: function () { $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showUpcoming( !$root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showUpcoming() ), $root.showSelectedEvents( $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents, 'upcoming', $root.lobbyPagePublicEventListMenu.selectedEventKindValues ) }">
+    <div class="oldorupcoming-text-container">
+      <span class="oldorupcoming-sign" data-bind="text: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showUpcoming() == true ? '-' : '+'">+</span>
+      <span>nadchodzące</span>
+    </div>
+    <span class="oldorupcoming-expand-text sm-hidden" data-bind="text: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showUpcoming() == true ? '[zwiń]' : '[rozwiń]'"></span>
+    <span class="oldorupcoming-event-count" data-bind="text: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.upcoming().length > 0 ? $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.upcoming().length : ''"></span>
+  </div>
+  <div class="display-events-overview-item-list" data-bind="foreach: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.upcoming" s>
+    <div class="display-events-overview-item">
+      <div class="overview-item-inner-wrapper" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
+        <div class="inline-block">
+          <div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
           <span class="list-item-title" data-bind="text: name"></span>
-				</div>
-			</div>
-			<div class="event-block-expand" style="display:none;">
-				@Html.Partial( "_LobbyEventBlock" )
-			</div>
-		</div>
-	</div>
+        </div>
+        <div class="inline-block" style="float:right;">
+          <span class="list-item-date">
+            <span class="list-item-other" data-bind="text: startDate.displayFullDate()"></span>
+            <span class="list-item-other" data-bind="text: startDate.displayFullTime()"></span>
+          </span>
+        </div>
+      </div>
+      <div class="event-block-expand" style="display:none;">
+        @Html.Partial("_LobbyEventBlock")
+      </div>
+    </div>
+  </div>
 </div>
 
