--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyPublicEventList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyPublicEventList.cshtml
@@ -10,7 +10,7 @@
   <div class="display-events-overview-item-list" data-bind="foreach: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.old">
     <div class="display-events-overview-item">
       <div class="overview-item-inner-wrapper" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
-        <div class="inline-block">
+        <div class="rg-inline-block">
           <div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
           <span class="list-item-title" data-bind="text: name"></span>
         </div>
@@ -37,7 +37,7 @@
   <div class="display-events-overview-item-list" data-bind="foreach: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.upcoming" s>
     <div class="display-events-overview-item">
       <div class="overview-item-inner-wrapper" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
-        <div class="inline-block">
+        <div class="rg-inline-block">
           <div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
           <span class="list-item-title" data-bind="text: name"></span>
         </div>
